--- Auto-Git Commit ---

--- a/Linux/Learning/奔跑吧Linux内核/4. 并发与同步/1. 原子操作和内存屏障.md
+++ b/Linux/Learning/奔跑吧Linux内核/4. 并发与同步/1. 原子操作和内存屏障.md
@@ -3,9 +3,9 @@
 
 <!-- code_chunk_output -->
 
-* [1 原子操作](#1-原子操作)
-* [2 内存屏障](#2-内存屏障)
-* [3 总结](#3-总结)
+- [1 原子操作](#1-原子操作)
+- [2 内存屏障](#2-内存屏障)
+- [3 总结](#3-总结)
 
 <!-- /code_chunk_output -->
 
@@ -17,7 +17,9 @@
 
 # 1 原子操作
 
-原子操作是指保证**指令以原子的方式执行**，执行过程不会被打断。如下, 假设线程A和线程B都尝试进行操作，请问线程A和B函数执行完后，i的值是多少？
+原子操作是指保证**指令以原子的方式执行**，执行过程不会被打断。
+
+如下, 假设线程A和线程B都尝试进行操作，请问线程A和B函数执行完后，i的值是多少？
 
 ```c++
 static int i =0;
@@ -308,9 +310,9 @@ static netdev_tx_t rtl8139_start_xmit (struct sk_buff *skb,
 }
 ```
 
-例 2: Linux内核里面的**睡眠和唤醒API**也运用了**内存屏障指令**，通常一个**进程**因为**等待某些事件**需要**睡眠**，例如调用wait\_even()。**睡眠者代码片段(！！！**)如下：
+例 2: Linux内核里面的**睡眠和唤醒API**也运用了**内存屏障指令**，通常一个**进程**因为**等待某些事件**需要**睡眠**，例如调用`wait_even()`。**睡眠者代码片段(！！！**)如下：
 
-```c
+```cpp
 for (;;) {
     set_current_state(TASK_UNINTERRUPTIBLE);
     if (event_indicated)
@@ -319,9 +321,9 @@ for (;;) {
 }
 ```
 
-其中，**set\_current\_state**()在**修改进程的状态**时隐含插入了**内存屏障函数smp\_mb**()。
+其中，`set_current_state()`在**修改进程的状态**时隐含插入了**内存屏障函数smp\_mb**()。
 
-```c
+```cpp
 [include/linux/sched.h]
 #define set_current_state(state_value)  \
     set_mb(current->state, (state_value))
@@ -330,7 +332,7 @@ for (;;) {
 #define set_mb(var, value)  do { var = value; smp_mb(); } while (0)
 ```
 
-唤醒者通常会调用wake\_up()，在**修改task状态之前**也隐含地插入内存屏障函数smp\_wmb()。
+唤醒者通常会调用`wake_up()`，在**修改task状态之前**也隐含地插入内存屏障函数smp\_wmb()。
 
 ```c
 [wake_up() -> autoremove_wake_function() -> try_to_wake_up()]
