--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -1,6 +1,6 @@
-## 一、内存Cache还有哪些不足？
+# 内存Cache的不足
 
-上一篇文章我们谈到了内存Cache，并且描述了典型的Cache一致性协议MESI。Cache的根本目的，是解决内存与CPU速度多达两个数量级的性能差异。一个包含Cache的计算机系统，其结构可以简单的表示为下图：
+上一篇文章我们谈到了内存Cache，并且描述了典型的Cache一致性协议MESI。**Cache**的**根本目的**，是解决**内存与CPU速度**多达两个数量级的**性能差异**。一个包含Cache的计算机系统，其结构可以简单的表示为下图：
 
 ![config](images/8.png)
 
@@ -8,17 +8,19 @@
 
 1、Cache的速度，虽然比内存有了极大的提升，但是仍然比CPU慢几倍。
 
-2、在发生“warmup cache miss”、“capacity miss”、“associativity miss”时，CPU必须等待从内存中读取数据，此时CPU会处于一种Stall的状态。其等待时间可能达到几百个CPU指令周期。
+2、在发生“`warmup cache miss`”、“`capacity miss`”、“`associativity miss`”时，**CPU**必须等待**从内存中读取数据**，此时CPU会处于一种**Stall的状态**。其等待时间可能达到几百个CPU指令周期。
 
 显然，这是现代计算机不能承受之重
 
-## 二、Write buffer是为了解决什么问题？
+# Write buffer的存在
 
-如果CPU仅仅是执行foo = 1这样的语句，它其实**无须从内存或者缓存中读取foo现在的值**。因为无论foo当前的值是什么，它都会被覆盖。在仅仅只有Cache的系统中，foo = 1 这样的操作也会形成**写停顿**。自然而然的，CPU设计者应当会想到在Cache 和CPU之间再添加一级缓存。由于这样的缓存主要是应对写操作引起的Cache Miss，并且缓存的数据与写操作相关，因此CPU设计者将它命名为“Write buffer”。调整后的结构示意图如下(图中的store buffer即为write buffer)：
+如果CPU仅仅是执行foo = 1这样的语句，它其实**无须从内存或者缓存中读取foo现在的值**。因为无论foo当前的值是什么，它**都会被覆盖**。在仅仅只有Cache的系统中，foo = 1 这样的操作也会形成**写停顿**。
+
+自然而然的，CPU设计者应当会想到在**Cache 和CPU之间**再**添加一级缓存**。由于这样的缓存主要是应对写操作引起的Cache Miss，并且缓存的数据与写操作相关，因此CPU设计者将它命名为“Write buffer”。调整后的结构示意图如下(图中的store buffer即为write buffer)：
 
 ![config](images/9.png)
 
-通过增加这些Write buffer，CPU可以简单的将要保存的数据放到Write buffer 中，并且继续运行，而不会真正去等待Cache从内存中读取数据并返回。
+通过**增加这些Write buffer**，CPU可以简单的将要保存的数据放到Write buffer 中，并且继续运行，而不会真正去等待Cache从内存中读取数据并返回。
 
 对于特定CPU来说，这些Write buffer是属于本地的。或者在硬件多线程系统中，它对于特定核来说，是属于本地的。无论哪一种情况，**一个特定CPU仅仅允许访问分配给它的Writebuffer**。例如，在上图中，CPU 0不能访问CPU 1的存储缓冲，反之亦然。
 
