--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -16,19 +16,19 @@
 
 如果CPU仅仅是执行foo = 1这样的语句，它其实**无须从内存或者缓存中读取foo现在的值**。因为无论foo当前的值是什么，它**都会被覆盖**。在仅仅只有Cache的系统中，foo = 1 这样的操作也会形成**写停顿**。
 
-自然而然的，CPU设计者应当会想到在**Cache 和CPU之间**再**添加一级缓存**。由于这样的缓存主要是应对写操作引起的Cache Miss，并且缓存的数据与写操作相关，因此CPU设计者将它命名为“Write buffer”。调整后的结构示意图如下(图中的store buffer即为write buffer)：
+自然而然的，CPU设计者应当会想到在**Cache 和CPU之间**再**添加一级缓存**。由于这样的缓存主要是应对**写操作引起！！！** 的**Cache Miss！！！**，并且缓存的数据与写操作相关，因此CPU设计者将它命名为“Write buffer”。调整后的结构示意图如下(图中的store buffer即为write buffer)：
 
 ![config](images/9.png)
 
 通过**增加这些Write buffer**，CPU可以简单的将要保存的数据放到Write buffer 中，并且继续运行，而不会真正去等待Cache从内存中读取数据并返回。
 
-对于特定CPU来说，这些Write buffer是属于本地的。或者在硬件多线程系统中，它对于特定核来说，是属于本地的。无论哪一种情况，**一个特定CPU仅仅允许访问分配给它的Writebuffer**。例如，在上图中，CPU 0不能访问CPU 1的存储缓冲，反之亦然。
+对于**特定CPU**来说，这些Write buffer是属于**本地**的。或者在**硬件多线程系统**中，它对于**特定核**来说，是属于**本地**的。无论哪一种情况，**一个特定CPU仅仅允许访问分配给它的Writebuffer**。例如，在上图中，CPU 0不能访问CPU 1的存储缓冲，反之亦然。
 
 Write buffer进一步提升了系统性能，但是它也会为硬件设计者带来一些困扰：
 
 **第一个困扰：违反了自身一致性**。
 
-考虑如下代码：变量“a”和“b”都初始化为0，包含变量“a”缓存行，最初被CPU 1所拥有，而包含变量“b”的缓存行最初被CPU0所拥有：
+考虑如下代码：变量“a”和“b”都初始化为0，包含**变量“a”缓存行**，最初被**CPU 1**所拥有，而包含**变量“b”的缓存行**最初被**CPU0**所拥有：
 
 ```
 a = 1;
@@ -38,19 +38,19 @@ assert(b == 2);
 
 没有哪一位软件工程师希望断言被触发！
 
-然而，如果采用上图中的简单系统结构，断言确实会被触发。理解这一点的关键在于：a最初被CPU 1所拥有，而CPU 0在执行a = 1时，将a的新值存储在CPU 0的Write buffer中。
+然而，如果采用上图中的简单系统结构，断言确实会被触发。理解这一点的关键在于：**a**最初被**CPU 1**所拥有，而**CPU 0**在执行**a = 1**时，将**a的新值**存储在**CPU 0**的**Write buffer**中。
 
 在这个简单系统中，触发断言的事件顺序可能如下：
 
-1．CPU 0 开始执行a = 1。
+1．**CPU 0** 开始执行**a = 1**。
 
-2．CPU 0在缓存中查找“a”，并且发现缓存缺失。
+2．CPU 0在**缓存**中查找“a”，并且发现**缓存缺失！！！**。
 
-3．因此，CPU 0发送一个“读使无效（read-invalidate message）”消息，以获得包含“a”的独享缓存行。
+3．因此，**CPU 0**发送一个“**读使无效！！！**（read-invalidate message）”消息，以获得包含“a”的独享缓存行。
 
 4．CPU 0将“a”记录到**存储缓冲区(write buffer，不是缓存行)**。
 
-5．CPU 1接收到“读使无效”消息，**它通过发送缓存行数据，并从它的缓存行中移除数据来响应这个消息**。
+5．**CPU 1**接收到“**读使无效**”消息，它通过**发送缓存行数据！！！**，并**从它的缓存行！！！** 中**移除数据！！！** 来**响应**这个消息。
 
 6．CPU 0开始执行b = a + 1。
 
