--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -48,13 +48,13 @@ assert(b == 2);
 
 3．因此，**CPU 0**发送一个“**读使无效！！！**（read-invalidate message）”消息，以获得包含“a”的独享缓存行。
 
-4．CPU 0将“a”记录到**存储缓冲区(write buffer，不是缓存行)**。
+4．**CPU 0**将“a”记录到**存储缓冲区(write buffer，不是缓存行)**。
 
 5．**CPU 1**接收到“**读使无效**”消息，它通过**发送缓存行数据！！！**，并**从它的缓存行！！！** 中**移除数据！！！** 来**响应**这个消息。
 
-6．CPU 0开始执行b = a + 1。
+6．**CPU 0**开始执行**b = a + 1**。
 
-7．CPU 0从CPU 1**接收到缓存行(存到缓存行)**，它仍然拥有一个为“0”的“a”值。
+7．CPU 0从CPU 1接收到**缓存行**(存到缓存行)，它仍然拥有一个为“0”的“a”值。
 
 8．CPU 0从它的缓存中读取到“a”的值，发现其值为0。
 
