--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -26,11 +26,13 @@
 
 Write buffer进一步提升了系统性能，但是它也会为硬件设计者带来一些困扰：
 
+## 违反自身一致性
+
 **第一个困扰：违反了自身一致性**。
 
 考虑如下代码：变量“a”和“b”都初始化为0，包含**变量“a”缓存行**，最初被**CPU 1**所拥有，而包含**变量“b”的缓存行**最初被**CPU0**所拥有：
 
-```
+```cpp
 a = 1;
 b = a + 1;
 assert(b == 2);
@@ -54,25 +56,27 @@ assert(b == 2);
 
 6．**CPU 0**开始执行**b = a + 1**。
 
-7．CPU 0从CPU 1接收到**缓存行**(存到缓存行)，它仍然拥有一个为“0”的“a”值。
+7．CPU 0从**CPU 1**接收到**缓存行**(存到缓存行)，它仍然拥有一个为“**0**”的“a”值。
 
-8．CPU 0从它的缓存中读取到“a”的值，发现其值为0。
+8．**CPU 0**从它的缓存中读取到“a”的值，发现**其值为0**。
 
-9．CPU 0将**存储队列(write buffer)中的条目应用到最近到达的缓存行**，设置缓存行中的“a”的值为1。
+9．CPU 0将**存储队列**(write buffer)中的条目应用到**最近到达的缓存行**，设置**缓存行**中的“a”的值为**1**。
 
-10．CPU 0将前面加载的“a”值0**(因为所有使用的数据都是读取的，也就是说从缓存行来，而不是存储队列)**加1，并存储该值到包含“b”的缓存行中（假设已经被CPU 0所拥有）。
+10．CPU 0将前面加载的“a”值0(因为所有使用的**数据都是读取的**，也就是说从**缓存行**来，而**不是存储队列**)加1，并存储该值到包含“b”的**缓存行**中（假设已经被CPU 0所拥有）。
 
-11．CPU 0 执行assert(b == 2)，并引起错误。
+11．CPU 0 执行assert(b == 2)，并**引起错误**。
 
 针对这种情况，硬件设计者对软件工程师还是给予了必要的同情。他们会对系统进行稍许的改进，如下图：
 
 ![config](images/10.png)
 
-在调整后的架构中，**每个CPU在执行加载操作时，将考虑（或者嗅探）它的Writebuffer**。这样，在前面执行顺序的第8步，将在存储缓冲区中为“a”找到正确的值1 ，因此最终的“b”值将是2，这正是我们期望的。
+在调整后的架构中，**每个CPU在执行加载操作时，将考虑（或者嗅探）它的Writebuffer**。这样，在前面执行顺序的**第8步**，将在存储缓冲区中为“a”找到正确的值1 ，因此**最终的“b”值将是2**，这正是我们期望的。
 
-Write buffer带来的第二个困扰，是违反了全局内存序。考虑如下的代码顺序，其中变量“a”、“b”的初始值是0。
+## 违反全局内存序
 
-```
+Write buffer带来的第二个困扰，是违反了**全局内存序**。考虑如下的代码顺序，其中变量“a”、“b”的初始值是0。
+
+```cpp
 void foo(void)
 {
     a = 1;
@@ -85,14 +89,14 @@ void bar(void)
     assert(a == 1);
 }
 ```
- 
-假设CPU 0执行foo()，CPU1执行bar()，再进一步假设包含“a”的缓存行仅仅位于CPU1的缓存中，包含“b”的缓存行被CPU 0所拥有。那么操作顺序可能如下：
 
-1．CPU 0 执行a = 1。缓存行不在CPU0的缓存中，因此CPU0将“a”的新值放到Write buffer，并发送一个“读使无效”消息。
+假设**CPU 0**执行`foo()`，**CPU1**执行`bar()`，再进一步假设**包含“a”的缓存**行仅仅位于**CPU1的缓存**中，**包含“b”的缓存行**被**CPU 0**所拥有。那么操作顺序可能如下：
 
-2．CPU 1 执行while (b == 0) continue，但是包含“b”的缓存行不在它的缓存中，因此它发送一个“读”消息。
+1．CPU 0 执行a = 1。缓存行**不在CPU0的缓存**中，因此**CPU0**将“a”的**新值**放到**Write buffer**，并发送一个“**读使无效**”消息。
 
-3．CPU 0 执行 b = 1，它已经拥有了该缓存行（换句话说，缓存行要么已经处于“modified”，要么处于“exclusive”状态），因此它存储新的“b”值到它的缓存行中。
+2．CPU 1 执行`while (b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
+
+3．CPU 0 执行 b = 1，它已经**拥有了该缓存行**（换句话说，缓存行要么已经处于“modified”，要么处于“exclusive”状态），因此它存储新的“b”值到它的缓存行中。
 
 4．CPU 0 接收到“读”消息，并且发送缓存行中的最近更新的“b”的值到CPU1，同时将缓存行设置为“shared”状态。
 
