--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -96,19 +96,19 @@ void bar(void)
 
 2．CPU 1 执行`while (b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
-3．CPU 0 执行 b = 1，它已经**拥有了该缓存行**（换句话说，缓存行要么已经处于“modified”，要么处于“exclusive”状态），因此它存储新的“b”值到它的缓存行中。
+3．CPU 0 执行 **b = 1**，它已经**拥有了该缓存行**（换句话说，缓存行要么已经处于“modified”，要么处于“exclusive”状态），因此它存储**新**的“**b**”值到它的**缓存行**中。(为啥不发送"读使无效"??)
 
-4．CPU 0 接收到“读”消息，并且发送缓存行中的最近更新的“b”的值到CPU1，同时将缓存行设置为“shared”状态。
+4．CPU 0 接收到“**读**”消息，并且发送缓存行中的最近更新的“b”的值到**CPU1**，同时将缓存行设置为“shared”状态。
 
-5．CPU 1 接收到包含“b”值的缓存行，并将其值写到它的缓存行中。
+5．CPU 1 接收到包含“**b**”值的缓存行，并将其值写到**它的缓存行**中。
 
-6．CPU 1 现在结束执行while (b ==0) continue，因为它发现“b”的值是1，它开始处理下一条语句。
+6．CPU 1 现在结束执行`while (b ==0) continue`，因为它发现“b”的值是1，它开始处理下一条语句。
 
-7．CPU 1 执行assert(a == 1)，并且，由于CPU 1工作在旧的“a”的值，因此断言验证失败。
+7．CPU 1 执行assert(a == 1)，并且，由于CPU 1工作在**旧的“a”的值**(值0)，因此断言验证失败。
 
-8．CPU 1 接收到“读使无效”消息，并且发送包含“a”的缓存行到CPU 0，同时在它的缓存中，将该缓存行变成无效。但是已经太迟了。
+8．CPU 1 接收到“**读使无效**”消息，并且**发送包含“a”的缓存行**到**CPU 0**，同时在它的缓存中，**将该缓存行变成无效**。但是已经太迟了。
 
-9．CPU 0 接收到包含“a”的缓存行，并且及时将存储缓冲区的数据保存到缓存行中，CPU1的断言失败受害于该缓存行。
+9．CPU 0 接收到**包含“a”的缓存行**，并且及时将**存储缓冲区**的数据保存到**缓存行**中，CPU1的断言失败受害于该缓存行。
 
 请注意，“内存屏障”已经在这里隐隐约约露出了它锋利的爪子！！！！
 
