--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
+++ b/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
@@ -1,6 +1,8 @@
-## 一、来自于霍金的难题
 
-据说斯蒂芬·霍金曾经声称半导体制造商面临两个基本问题：
+
+# 来自于霍金的难题
+
+据说斯蒂芬·霍金曾经声称**半导体制造商**面临两个基本问题：
 
 （1）有限的光速
 
@@ -18,9 +20,9 @@
 
 第一个限制不容易被绕过，虽然量子技术、甚至弦论，理论上允许通信速度超过光速。但是这仅仅是理论研究，实际工程中还未应用。
 
-## 二、原子操作有多慢？
+# 原子操作有多慢？
 
-这里的原子操作，是特指Linux内核中，类似于atomic\_long\_add\_return这样的API。简单的说，就是当某个原子操作完成时，确保所有CPU核已经识别到对原子变量的修改，并且在原子操作期间，其他CPU核不会同步对该变量进行修改。这必然要求相应的电信号在所有的CPU之间广播。如下图：
+这里的原子操作，是特指Linux内核中，类似于`atomic_long_add_return`这样的API。简单的说，就是当**某个原子操作完成**时，确保**所有CPU核**已经**识别到对原子变量的修改**，并且在**原子操作期间**，**其他CPU核不会同步对该变量进行修改**。这必然要求相应的电信号在所有的CPU之间广播。如下图：
 
 ![config](images/1.png)
 
@@ -113,15 +115,15 @@ MESI协议需要在CPU之间通信。如果CPU在**单一共享总线**上，只
 
 - **读消息**：“读”消息包含**要读取的缓存行的物理地址**。
 
-- **读响应消息**：“读响应”消息包含**较早前**的“**读**”消息的**数据**。这个“读响应”消息可能由**物理内存**或者**其他CPU**的缓存提供。例如，如果**一个缓存**处于“**modified**”状态，那么，**它的缓存**必须提供“**读响应**”消息。
+- **读响应消息**：“读响应”消息包含**较早前**的“**读**”消息的**数据**。这个“**读响应**”消息可能由**物理内存**或者**其他CPU**的缓存提供。例如，如果**一个缓存**处于“**modified**”状态，那么，**它的缓存**必须提供“**读响应**”消息。
 
 - **使无效消息**：“使无效”消息包含要**使无效的缓存行的物理地址**。**其他的缓存**必须从它们的缓存中**移除相应的数据**并且响应此消息。
 
 - **使无效应答**：一个接收到“**使无效**”消息的CPU必须在**移除指定数据后**响应一个“使无效应答”消息。
 
-- **读使无效**：“读使无效”消息包含**缓存行要读取的物理地址**。同时**指示其他缓存移除数据**。因此，它同时包含一个“**读**”消息和一个“**使无效**”消息。“读使无效”消息同时需要“读响应”消息以及“使无效应答”消息进行答应。
+- **读使无效**：“读使无效”消息包含**缓存行要读取的物理地址**。同时**指示其他缓存移除数据**。因此，它同时包含一个“**读**”消息和一个“**使无效**”消息。“读使无效”消息同时需要“**读响应**”消息以及“**使无效应答**”消息**进行答应**。
 
-- 写回：“写回”消息包含要回写到物理内存的地址和数据。(并且也许会“探测”其他CPU的缓存)。这个消息允许缓存在必要时换出处于“modified”状态的数据以腾出空间。
+- **写回**：“写回”消息包含要回写到物理内存的地址和数据。(并且也许会“探测”其他CPU的缓存)。这个消息允许缓存在**必要时换出**处于“**modified**”状态的数据以腾出空间。
 
 再次重申，所有这些消息均需要在CPU之间传播电信号，都面临霍金提出的那两个IT难题。
 
