--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -77,12 +77,14 @@ assert(b == 2);
 Write buffer带来的第二个困扰，是违反了**全局内存序**。考虑如下的代码顺序，其中变量“a”、“b”的初始值是0。
 
 ```cpp
+// CPU 0
 void foo(void)
 {
     a = 1;
     b = 1;
 }
 
+// CPU 1
 void bar(void)
 {
     while (b == 0) continue;
@@ -112,13 +114,13 @@ void bar(void)
 
 请注意，“内存屏障”已经在这里隐隐约约露出了它锋利的爪子！！！！
 
-## 三、使无效队列又是为了解决什么问题？
+# 使无效队列
 
 一波未平，另一波再起。
 
-问题的复杂性还不仅仅在于Writebuffer，因为仅仅有Write buffer，硬件还会形成严重的性能瓶颈。
+问题的复杂性还不仅仅在于Writebuffer，因为仅仅有Write buffer，硬件还会形成严重的**性能瓶颈**。
 
-问题在于，每一个核的Writebuffer相对而言都比较小，这意味着执行一段较小的存储操作序列的CPU，很快就会填满它的Writebuffer。此时，CPU在能够继续执行前，必须等待Cache刷新操作完成，以清空它的Write buffer。
+问题在于，每一个核的Writebuffer相对而言都**比较小**，这意味着执行一段较小的存储操作序列的CPU，很快就会**填满**它的Writebuffer。此时，CPU在能够继续执行前，必须**等待Cache刷新操作完成**，以清空它的Write buffer。
 
 清空Cache是一个耗时的操作，因为必须要在所在CPU之间广播MESI消息(使无效消息)，并等待对这些MESI消息的响应。为了加快MESI消息响应速度，CPU设计者增加了使无效队列。也就是说，**CPU将接收到的使无效消息暂存起来，在发送使无效消息应答时，并不真正将Cache中的值无效**。而是等待在合适的时候，延迟使无效操作。
 
