--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
+++ b/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
@@ -38,13 +38,13 @@
 
 在上表中，一次“CAS cache miss”的CPU周期是266，够长了吧？而这个测试结果，是在比较新的、4核CPU的多核系统中进行的。在老一点的系统中，或者在更多CPU核心的系统中，这个时间更长。
 
-## 三、变量可以拥有多个值
+# 变量可以拥有多个值
 
 这不是天方夜谭。
 
-假设CPU 0向全局变量foo写入一个值1，我们会很自然的认为：其他CPU会立即识别到foo的值为1。即使有所疑惑，我们可能也会退一步认为，在稍后某个时刻，其他“所有”CPU都会“同时”识别到foo的值为1。而不会出现一种奇怪的现象：在某个时刻，CPU 1识别到其值为1，而CPU 2识别到其值为0。不幸的是，是时候告别这种想法了。并行计算就是这么神奇和反直觉。如果不能理解这一点，就没办法真正理解RCU。
+假设**CPU 0**向全局变量foo写入一个值1，我们会很自然的认为：其他CPU会立即识别到foo的值为1。即使有所疑惑，我们可能也会退一步认为，在稍后某个时刻，其他“所有”CPU都会“同时”识别到foo的值为1。而不会出现一种奇怪的现象：在某个时刻，CPU 1识别到其值为1，而CPU 2识别到其值为0。不幸的是，是时候告别这种想法了。并行计算就是这么神奇和反直觉。如果不能理解这一点，就没办法真正理解RCU。
 
-要明白这一点，考虑下面的代码片段。它被几个CPU并行的执行。第1行设置共享变量的值为当前CPU的ID，第2行调用gettb()函数对几个值进行初始化，该函数读取硬件时间计数，这个计数值由SOC硬件给出，并且在所有CPU之间共享。当然，这个硬件计数值主要是在power架构上有效，笔者在powerpce500架构上经常使用它。第3-8行的循环，记录变量在当前CPU上保持的时间长度。
+要明白这一点，考虑下面的代码片段。它被**几个CPU并行的执行**。**第1行**设置共享变量的值为**当前CPU的ID**，第2行调用`gettb()`函数对几个值进行初始化，该函数**读取硬件时间计数**，这个计数值由**SOC硬件**给出，并且在**所有CPU之间共享**。当然，这个硬件计数值主要是在power架构上有效，笔者在powerpce500架构上经常使用它。第3-8行的循环，记录变量在当前CPU上保持的时间长度。
 
 ```cpp
 state.variable = mycpu;
@@ -57,7 +57,7 @@ while (state.variable == mycpu) {
 }
 ```
 
-在退出循环前，firsttb 将保存一个时间戳，这是赋值的时间。lasttb也保存一个时间戳，它是对共享变量保持最后赋予的值时刻的采样值，如果在进入循环前，共享变量已经变化，那么就等于firsttb。
+在退出循环前，`firsttb` 将保存一个时间戳，这是赋值的时间。lasttb也保存一个时间戳，它是对共享变量保持最后赋予的值时刻的采样值，如果在进入循环前，共享变量已经变化，那么就等于firsttb。
 
 这个数据是在一个1.5GHz POWER5 8核系统上采集的。每一个核包含一对硬件线程。CPU 1、2、3和4记录值，而CPU 0控制测试。时间戳计数器周期是5.32ns，这对于我们观察缓存状态来说是足够了。
 
@@ -73,15 +73,15 @@ while (state.variable == mycpu) {
 
 请不要说：我还不知道MESI是什么？
 
-简单的说，MESI是一种内存缓存一致性协议。
+简单的说，MESI是一种**内存缓存一致性协议**。
 
 现代CPU的速度比现代内存系统的速度快得多。2006 年的CPU可以在每纳秒内执行十条指令。但是需要很多个十纳秒才能从物理内存中取出一个数据。它们的速度差异（超过2个数量级）导致在现代CPU中出现了数兆级别的缓存。这些缓存与CPU是相关联的，如下图。典型的，缓存可以在几个时钟周期内被访问。借助于CPU流水线的帮助，我们暂且可以认为，缓存能够抵消内存对CPU性能的影响。
 
 ![config](images/5.png)
 
-CPU缓存和内存之间的数据流是固定长度的块，称为“缓存行”，其大小通常是2的N次方。范围从16到256字节不等。当一个特定的数据第一次被CPU访问时，它在缓存中还不存在，这称为“cache miss”(或者可被更准确的称为“startup cache miss”或者“warmupcache miss”)。“cache miss”意味着：CPU在**从物理内存中读取数据(cache主要用于读数据)**时，它必须等待(或处于“stalled”状态) 数百个CPU周期。但是，数据将被装载入CPU缓存以后，后续的访问将在缓存中找到，因此可以全速运行。
+CPU缓存和内存之间的数据流是固定长度的块，称为“缓存行”，其大小通常是2的N次方。范围从16到256字节不等。当一个特定的数据第一次被CPU访问时，它在**缓存**中还**不存在**，这称为“**cache miss**”(或者可被更准确的称为“`startup cache miss`”或者“`warmupcache miss`”)。“cache miss”意味着：CPU在**从物理内存中读取数据(cache主要用于读数据)**时，它必须等待(或处于“**stalled**”状态) 数百个CPU周期。但是，数据将被装载入CPU缓存以后，后续的访问将在缓存中找到，因此可以全速运行。
 
-经过一段时间后，CPU的缓存将会被填满，后续的缓存缺失需要换出缓存中现有的数据，以便为最近的访问项腾出空间。这种“cache miss”被称为“capacitymiss”，因为它是由于缓存容量限制而造成的。但是，即使此时缓存还没有被填满，大量缓存也可能由于一个新数据而被换出。这是由于**大量的缓存是通过硬件哈希表来实现的，这些哈希表有固定长度的哈希桶**（或者叫“sets”，CPU设计者是这样称呼的），如下图。
+经过一段时间后，CPU的缓存将会被填满，后续的缓存缺失需要换出缓存中现有的数据，以便为最近的访问项腾出空间。这种“cache miss”被称为“`capacity miss`”，因为它是由于**缓存容量限制**而造成的。但是，即使此时缓存还没有被填满，大量缓存也可能由于一个新数据而被换出。这是由于**大量的缓存是通过硬件哈希表来实现的，这些哈希表有固定长度的哈希桶**（或者叫“sets”，CPU设计者是这样称呼的），如下图。
 
 ![config](images/6.png)
 
