--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -122,7 +122,7 @@ void bar(void)
 
 问题在于，每一个核的Writebuffer相对而言都**比较小**，这意味着执行一段较小的存储操作序列的CPU，很快就会**填满**它的Writebuffer。此时，CPU在能够继续执行前，必须**等待Cache刷新操作完成**，以清空它的Write buffer。
 
-清空Cache是一个耗时的操作，因为必须要在所在CPU之间广播MESI消息(使无效消息)，并等待对这些MESI消息的响应。为了加快MESI消息响应速度，CPU设计者增加了使无效队列。也就是说，**CPU将接收到的使无效消息暂存起来，在发送使无效消息应答时，并不真正将Cache中的值无效**。而是等待在合适的时候，延迟使无效操作。
+清空Cache是一个耗时的操作，因为必须要在所在**CPU之间广播MESI消息**(**使无效消息**)，并等待对这些MESI消息的响应。为了加快MESI消息响应速度，CPU设计者增加了**使无效队列**。也就是说，**CPU将接收到的使无效消息暂存起来，在发送使无效消息应答时，并不真正将Cache中的值无效**。而是等待在合适的时候，延迟使无效操作。
 
 下图是增加了使无效队列的系统结构：
 
@@ -136,7 +136,7 @@ void bar(void)
 
 假设“a”和“b”被初始化为0，“a”是只读的（MESI“shared”状态），“b”被CPU 0拥有（MESI“exclusive”或者“modified”状态）。然后假设CPU 0执行foo()而CPU1执行bar()，代码片段如下：
 
-```
+```cpp
 void foo(void)
 {
     a = 1;
