--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -128,7 +128,7 @@ void bar(void)
 
 ![config](images/11.png)
 
-将一个条目放进使无效队列，实际上是由CPU承诺：**在发送任何与该缓存行相关的MESI协议消息前，处理该条目**。在Cache竞争不太剧烈的情况下，CPU会很出色地完成此事。
+将一个条目放进**使无效队列**，实际上是由CPU承诺：**在发送任何与该缓存行相关的MESI协议消息前，处理该条目**。在Cache竞争不太剧烈的情况下，CPU会很出色地完成此事。
 
 使无效队列带来的问题是：在没有真正将Cache无效之前，就告诉其他CPU已经使无效了。这多少有一点欺骗的意思。然而现代CPU确实是这样设计的。
 
@@ -137,6 +137,7 @@ void bar(void)
 假设“a”和“b”被初始化为0，“a”是只读的（MESI“shared”状态），“b”被CPU 0拥有（MESI“exclusive”或者“modified”状态）。然后假设CPU 0执行foo()而CPU1执行bar()，代码片段如下：
 
 ```cpp
+// CPU 0
 void foo(void)
 {
     a = 1;
@@ -144,6 +145,7 @@ void foo(void)
     b = 1;
 }
 
+// CPU 1
 void bar(void)
 {
     while (b == 0) continue;
@@ -153,23 +155,23 @@ void bar(void)
 
 操作顺序可能如下：
 
-1．CPU 0执行a = 1。在CPU0中，相应的缓存行是只读的，因此CPU 0将“a”的新值放入存储缓冲区，并发送一个“使无效”消息，这是为了使CPU1的缓存中相应的缓存行失效。
+1．CPU 0执行**a = 1**。在CPU0中，相应的缓存行是**只读**的，因此CPU 0将“a”的新值放入**存储缓冲区**，并发送一个“**使无效**”消息，这是为了使**CPU1**的缓存中相应的**缓存行失效**。
 
-2．CPU 1执行while (b == 0)continue，但是包含“b”的缓存行不在它的缓存中，因此它发送一个“读”消息。
+2．CPU 1执行`while (b == 0)continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
-3．CPU 1接收到CPU 0的“使无效”消息，将它排队，并立即响应该消息。
+3．CPU 1接收到CPU 0的“**使无效**”消息，将它**排队**，并**立即响应该消息**。
 
-4．CPU 0接收到来自于CPU 1的响应消息，因此它放心的通过第4行的smp_mb()，从存储缓冲区移动“a”的值到缓存行。
+4．CPU 0接收到来自于CPU 1的响应消息，因此它放心的通过第4行的`smp_mb()`，从**存储缓冲区**移动“a”的值到**缓存行**。
 
-5．CPU 0执行b = 1。它已经拥有这个缓存行（也就是说，缓存行已经处于“modified”或者“exclusive”状态），因此它将“b”的新值存储到缓存行中。
+5．CPU 0执行b = 1。它已经拥有这个**缓存行**（也就是说，缓存行已经处于“modified”或者“exclusive”状态），因此它将“b”的新值**存储到缓存行**中。
 
-6．CPU 0接收到“读”消息，并且发送包含“b”的新值的缓存行到CPU 1，同时在自己的缓存中，标记缓存行为“shared”状态。
+6．CPU 0**接收**到“**读**”消息，并且发送包含“b”的**新值**的缓存行到**CPU 1**，同时在自己的缓存中，标记缓存行为“**shared**”状态。
 
-7．CPU 1接收到包含“b”的缓存行并且将其应用到本地缓存。
+7．CPU 1接收到包含“b”的缓存行并且将其**应用到本地缓存**。
 
-8．CPU 1现在可以完成while (b ==0) continue，因为它发现“b”的值为1，接着处理下一条语句。
+8．CPU 1现在可以完成`while (b ==0) continue`，因为它发现“b”的值为1，接着处理下一条语句。
 
-9．CPU 1执行assert(a == 1)，并且，由于旧的“a”值还在CPU 1的缓存中，因此陷入错误。
+9．CPU 1执行assert(a == 1)，并且，由于**旧的“a”值**还在CPU 1的**缓存**中，因此**陷入错误**。
 
 10．虽然陷入错误，CPU 1处理已经排队的“使无效”消息，并且（迟到）在自己的缓存中刷新包含“a”值的缓存行。
 
