--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -122,13 +122,13 @@ void bar(void)
 
 问题在于，每一个核的Writebuffer相对而言都**比较小**，这意味着执行一段较小的存储操作序列的CPU，很快就会**填满**它的Writebuffer。此时，CPU在能够继续执行前，必须**等待Cache刷新操作完成**，以清空它的Write buffer。
 
-清空Cache是一个耗时的操作，因为必须要在所在**CPU之间广播MESI消息**(**使无效消息**)，并等待对这些MESI消息的响应。为了加快MESI消息响应速度，CPU设计者增加了**使无效队列**。也就是说，**CPU将接收到的使无效消息暂存起来，在发送使无效消息应答时，并不真正将Cache中的值无效**。而是等待在合适的时候，延迟使无效操作。
+清空Cache是一个耗时的操作，因为必须要在所在**CPU之间广播MESI消息**(**使无效消息**)，并等待对这些MESI消息的响应。为了加快MESI消息响应速度，CPU设计者增加了**使无效队列**。也就是说，**CPU将接收到的使无效消息！！！暂存起来，在发送使无效消息应答时，并不真正将Cache中的值无效**。而是等待在合适的时候，延迟使无效操作。
 
 下图是增加了使无效队列的系统结构：
 
 ![config](images/11.png)
 
-将一个条目放进**使无效队列**，实际上是由CPU承诺：**在发送任何与该缓存行相关的MESI协议消息前，处理该条目**。在Cache竞争不太剧烈的情况下，CPU会很出色地完成此事。
+将一个条目放进**使无效队列**，实际上是由CPU承诺：**在发送任何与该缓存行相关！！！的MESI协议消息前，处理该条目**。在Cache竞争不太剧烈的情况下，CPU会很出色地完成此事。
 
 使无效队列带来的问题是：在没有真正将Cache无效之前，就告诉其他CPU已经使无效了。这多少有一点欺骗的意思。然而现代CPU确实是这样设计的。
 
@@ -159,9 +159,9 @@ void bar(void)
 
 2．CPU 1执行`while (b == 0)continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
-3．CPU 1接收到CPU 0的“**使无效**”消息，将它**排队**，并**立即响应该消息**。
+3．CPU 1接收到CPU 0的“**使无效**”消息，将它(**该消息**)**排队**，并**立即响应该消息**。
 
-4．CPU 0接收到来自于CPU 1的响应消息，因此它放心的通过第4行的`smp_mb()`，从**存储缓冲区**移动“a”的值到**缓存行**。
+4．CPU 0接收到来自于CPU 1的响应消息，因此它放心的通过第4行的`smp_mb()`，从**存储缓冲区**移动“**a**”的值到**缓存行**。
 
 5．CPU 0执行b = 1。它已经拥有这个**缓存行**（也就是说，缓存行已经处于“modified”或者“exclusive”状态），因此它将“b”的新值**存储到缓存行**中。
 
@@ -173,11 +173,11 @@ void bar(void)
 
 9．CPU 1执行assert(a == 1)，并且，由于**旧的“a”值**还在CPU 1的**缓存**中，因此**陷入错误**。
 
-10．虽然陷入错误，CPU 1处理已经排队的“使无效”消息，并且（迟到）在自己的缓存中刷新包含“a”值的缓存行。
+10．虽然陷入错误，**CPU 1**处理已经排队的“**使无效**”消息，并且（迟到）在**自己的缓存**中**刷新包含“a”值的缓存行**。
 
 ## 四、内存屏障
 
-既然硬件设计者通过Write buffer和使无效队列引入了额外的**内存乱序**问题，那么就应当为软件工程师提供某种方法来解决这个问题。即使相应的解决方法会折磨软件工程师。
+既然硬件设计者通过**Write buffer**和**使无效队列**引入了额外的**内存乱序**问题，那么就应当为软件工程师提供某种方法来解决这个问题。即使相应的解决方法会折磨软件工程师。
 
 答案就是内存屏障。对于Linux内核资深工程师来说，这个答案也显得比较沉重，它太折磨人了：）
 
@@ -185,7 +185,7 @@ void bar(void)
 
 在那个例子中，硬件设计者不能直接帮助我们，**因为CPU没有办法识别那些相关联的变量（例子中的a和b）**，更不用说它们如何关联。因此，硬件设计者提供**内存屏障指令，以允许软件告诉CPU这些关系的存在**。程序必须修改，以包含内存屏障：
 
-```
+```cpp
 void foo(void)
 {
     a = 1;
@@ -200,17 +200,17 @@ void bar(void)
 }
 ```
 
-内存屏障smp_mb()将导致CPU在刷新后续的缓存行（包含b的缓存行）之前，前面的Write buffer被先刷新。在继续处理之前，CPU可能采取的动作是：
+内存屏障`smp_mb()`将导致CPU在**刷新后续的缓存行**（包含b的缓存行）**之前**，前面的**Write buffer被先刷新**。在**继续处理之前**，CPU可能采取的动作是：
 
-1、简单的停顿下来，直到存储缓冲区变成空；
+1、简单的停顿下来，直到**存储缓冲区变成空**；
 
-2、也可能是使用存储缓冲区来持有后续的存储操作，直到前面所有的存储缓冲区已经被保存到缓存行中。
+2、也可能是使用**存储缓冲区**来**持有后续的存储操作**，直到**前面所有的存储缓冲区**已经被保存到**缓存行**中。
 
 理解其中第2点，能够帮助我们理解“内存屏障”这个单词的来历！！
 
 后一种情况下，操作序列可能如下所示：
 
-1．CPU 0执行a= 1。缓存行不在CPU0的缓存中，因此CPU 0将“a”的新值放到存储缓冲中，并发送一个“读使无效”消息。
+1．CPU 0执行a= 1。缓存行**不在CPU0的缓存**中，因此**CPU 0**将“a”的**新值**放到**存储缓冲**中，并发送一个“**读使无效**”消息。
 
 2．CPU 1 执行while(b == 0) continue，但是包含“b”的缓存行不在它的缓存中，因此它发送一个“读”消息。
 
