--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -186,6 +186,7 @@ void bar(void)
 在那个例子中，硬件设计者不能直接帮助我们，**因为CPU没有办法识别那些相关联的变量（例子中的a和b）**，更不用说它们如何关联。因此，硬件设计者提供**内存屏障指令，以允许软件告诉CPU这些关系的存在**。程序必须修改，以包含内存屏障：
 
 ```cpp
+// CPU 0
 void foo(void)
 {
     a = 1;
@@ -193,6 +194,7 @@ void foo(void)
     b = 1;
 }
 
+// CPU 1
 void bar(void)
 {
     while (b == 0) continue;
@@ -212,33 +214,33 @@ void bar(void)
 
 1．CPU 0执行a= 1。缓存行**不在CPU0的缓存**中，因此**CPU 0**将“a”的**新值**放到**存储缓冲**中，并发送一个“**读使无效**”消息。
 
-2．CPU 1 执行while(b == 0) continue，但是包含“b”的缓存行不在它的缓存中，因此它发送一个“读”消息。
+2．CPU 1 执行`while(b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
-3．CPU 0执行smp_mb()，并标记当前所有存储缓冲区的条目。（也就是说a = 1这个条目）。
+3．CPU 0执行`smp_mb()`，并**标记当前所有存储缓冲区的条目**。（也就是说**a = 1这个条目**）。
 
-4．CPU 0执行b= 1。它已经拥有这个缓存行了。（也就是说, 缓存行已经处于“modified”或者“exclusive”状态），但是在存储缓冲区中存在一个标记条目。因此，它不将“b”的新值存放到缓存行，而是存放到存储缓冲区中。（但是“b”不是一个标记条目）。
+4．CPU 0执行b= 1。它**已经拥有这个缓存行**了。（也就是说, **缓存行**已经处于“**modified**”或者“**exclusive**”状态），但是在**存储缓冲区**中存在一个**标记条目**。因此，它**不将“b”的新值**存放到**缓存行**，而是存放到**存储缓冲区**中。（但是“b”**不是一个标记条目**）。
 
-5．CPU 0接收“读”消息，随后发送包含原始“b”值的缓存行给CPU1。它也标记该缓存行的复制为“shared”状态。
+5．CPU 0接收“读”消息，随后发送包含**原始“b”值的缓存行**给**CPU1**。它也标记**该缓存行**的复制为“**shared**”状态。
 
-6．CPU 1读取到包含“b”的缓存行，并将它复制到本地缓存中。
+6．CPU 1读取到包含“b”的缓存行，并将它复制到**本地缓存**中。
 
-7．CPU 1现在可以装载“b”的值了，但是，由于它发现其值仍然为“0”，因此它重复执行while语句。“b”的新值被安全的隐藏在CPU0的存储缓冲区中。
+7．CPU 1现在可以装载“b”的值了，但是，由于它发现其值仍然为“0”，因此它**重复执行while语句**。“b”的新值被安全的隐藏在**CPU0**的**存储缓冲区**中。
 
-8．CPU 1接收到“读使无效”消息，发送包含“a”的缓存行给CPU 0，并且使它的缓存行无效。
+8．CPU 1接收到“**读使无效**”消息，发送**包含“a”的缓存行**给CPU 0，并且使它的**缓存行无效**。
 
-9．CPU 0接收到包含“a”的缓存行，使用存储缓冲区的值替换缓存行，将这一行设置为“modified”状态。
+9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值替换缓存行**，将这一行设置为“**modified**”状态。
 
-10．由于被存储的“a”是存储缓冲区中唯一被smp_mb()标记的条目，因此CPU0能够存储“b”的新值到缓存行中，除非包含“b”的缓存行当前处于“shared”状态。
+10．由于被存储的“a”是**存储缓冲区**中唯一被`smp_mb()`**标记**的条目，因此CPU0能够**存储“b”的新值**到**缓存行**中，除非包含“b”的缓存行当前处于“**shared**”状态。
 
-11．CPU 0发送一个“使无效”消息给CPU 1。
+11．CPU 0发送一个“**使无效**”消息给CPU 1, b无效消息。
 
-12．CPU 1接收到“使无效”消息，使包含“b”的缓存行无效，并且发送一个“使无效应答”消息给 CPU 0。
+12．CPU 1接收到“使无效”消息，**使包含“b”的缓存行无效**，并且发送一个“**使无效应答**”消息给 CPU 0。
 
-13．CPU 1执行while(b == 0) continue，但是包含“b”的缓存行不在它的缓存中，因此它发送一个“读”消息给 CPU 0。
+13．CPU 1执行`while(b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息给 CPU 0。
 
-14．CPU 0接收到“使无效应答”消息，将包含“b”的缓存行设置成“exclusive”状态。CPU 0现在存储新的“b”值到缓存行。
+14．CPU 0接收到“使无效应答”消息，将包含“b”的缓存行设置成“**exclusive**”状态。CPU 0现在存储**新的“b”值到缓存行**。
 
-15．CPU 0接收到“读”消息，同时发送包含新的“b”值的缓存行给 CPU 1。它也标记该缓存行的复制为“shared”状态。
+15．CPU 0接收到“读”消息，同时发送包含新的“b”值的缓存行给 CPU 1。它也标记该缓存行的复制为“**shared**”状态。
 
 16．CPU 1接收到包含“b”的缓存行，并将它复制到本地缓存中。
 
@@ -254,7 +256,7 @@ void bar(void)
 
 读端内存屏障指令能够与使无效队列交互，这样，当一个特定的CPU执行一个内存屏障时，它标记无效队列中的所有条目，并强制所有后续的装载操作进行等待，直到所有标记的条目都保存到CPU的Cache中。因此，我们可以在bar函数中添加一个内存屏障，如下：
 
-```
+```cpp
 void foo(void)
 {
     a = 1;
