--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -250,9 +250,11 @@ void bar(void)
 
 正如你看到的那样，这个过程涉及不少工作。即使某些事情从直觉上看是简单的操作，就像“加载a的值”这样的操作，都会包含大量复杂的步骤。
 
-前面提到的，其实是写端的屏障，它解决Write buffer引入的内存乱序。接下来我们看看读端的屏障，它解决使无效队列引入的内存乱序。
+前面提到的，其实是**写端的屏障**，它解决**Write buffer**引入的**内存乱序**。
 
-要避免使无效队列例子中的错误，应当再使用读端内存屏障：
+接下来我们看看**读端的屏障**，它解决**使无效队列**引入的**内存乱序**。
+
+要避免使无效队列例子中的错误，应当再使用**读端内存屏障**：
 
 读端内存屏障指令能够与使无效队列交互，这样，当一个特定的CPU执行一个内存屏障时，它标记无效队列中的所有条目，并强制所有后续的装载操作进行等待，直到所有标记的条目都保存到CPU的Cache中。因此，我们可以在bar函数中添加一个内存屏障，如下：
 
