--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
+++ b/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
@@ -119,7 +119,7 @@ MESI协议需要在CPU之间通信。如果CPU在**单一共享总线**上，只
 
 - **读响应消息**：“读响应”消息包含**较早前**的“**读**”消息的**数据**。这个“**读响应**”消息可能由**物理内存**或者**其他CPU**的缓存提供。例如，如果**一个缓存**处于“**modified**”状态，那么，**它的缓存**必须提供“**读响应**”消息。
 
-- **使无效消息**：“使无效”消息包含要**使无效的缓存行的物理地址**。**其他的缓存**必须从它们的缓存中**移除相应的数据**并且响应此消息。
+- **使无效消息**：“使无效”消息包含要**使无效的缓存行的物理地址**。**其他的缓存**必须从它们的缓存中**移除相应的数据**并且**响应此消息**。
 
 - **使无效应答**：一个接收到“**使无效**”消息的CPU必须在**移除指定数据后**响应一个“使无效应答”消息。
 
