--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -130,11 +130,13 @@ void bar(void)
 
 将一个条目放进**使无效队列**，实际上是由CPU承诺：**在发送任何与该缓存行相关！！！的MESI协议消息前，处理该条目**。在Cache竞争不太剧烈的情况下，CPU会很出色地完成此事。
 
-使无效队列带来的问题是：在没有真正将Cache无效之前，就告诉其他CPU已经使无效了。这多少有一点欺骗的意思。然而现代CPU确实是这样设计的。
+使无效队列带来的问题是：在**没有真正将Cache无效之前**，就**告诉其他CPU已经使无效**了。这多少有一点欺骗的意思。然而现代CPU确实是这样设计的。
 
 这个事实带来了额外的**内存乱序**的机会，看看如下示例：
 
-假设“a”和“b”被初始化为0，“a”是只读的（MESI“shared”状态），“b”被CPU 0拥有（MESI“exclusive”或者“modified”状态）。然后假设CPU 0执行foo()而CPU1执行bar()，代码片段如下：
+假设“a”和“b”被初始化为**0**，“a”是只读的（MESI“**shared**”状态），“b”被CPU 0拥有（MESI“exclusive”或者“modified”状态）。
+
+然后假设CPU 0执行foo()而CPU1执行bar()，代码片段如下：
 
 ```cpp
 // CPU 0
@@ -228,7 +230,7 @@ void bar(void)
 
 8．CPU 1接收到“**读使无效**”消息，发送**包含“a”的缓存行**给CPU 0，并且使它的**缓存行无效**。
 
-CPU 1执行"读使无效"耗时较长, 通常会将该消息存放到无效队列中, 马上返回响应. 这时CPU 0收到响应后会接着执行b = 1. 等cpu 1执行到`assert(a == 1)`时在无效队列中的"读使无效"有可能还没来得及执行, 这时会使用cpu 1缓存中值为0的a, 导致断言错误.
+CPU 1执行"读使无效"耗时较长, 通常会将该消息存放到无效队列中, 马上返回响应. 这时CPU 0收到响应后会接着执行b = 1. 等**cpu 1**执行到`assert(a == 1)`时在无效队列中的"**读使无效**"有可能**还没来得及执行**, 这时会使用cpu 1缓存中值为0的a, 导致断言错误.
 
 9．CPU 0**接收到包含“a”的缓存行**，使用**存储缓冲区的值替换缓存行**，将这一行设置为“**modified**”状态。
 
