--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -132,6 +132,8 @@ void bar(void)
 
 使无效队列带来的问题是：在**没有真正将Cache无效之前**，就**告诉其他CPU已经使无效**了。这多少有一点欺骗的意思。然而现代CPU确实是这样设计的。
 
+## 无效队列的内存乱序
+
 这个事实带来了额外的**内存乱序**的机会，看看如下示例：
 
 假设“a”和“b”被初始化为**0**，“a”是只读的（MESI“**shared**”状态），“b”被CPU 0拥有（MESI“exclusive”或者“modified”状态）。
