--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -136,7 +136,7 @@ void bar(void)
 
 这个事实带来了额外的**内存乱序**的机会，看看如下示例：
 
-假设“a”和“b”被初始化为**0**，“a”是只读的（MESI“**shared**”状态），“b”被CPU 0拥有（MESI“exclusive”或者“modified”状态）。
+假设“a”和“b”被初始化为**0**，“a”是只读的（MESI“**shared**”状态, CPU 0和CPU 1都有其缓存），“b”被**CPU 0**拥有（MESI“**exclusive**”或者“**modified**”状态）。
 
 然后假设CPU 0执行foo()而CPU1执行bar()，代码片段如下：
 
