--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -165,21 +165,21 @@ void bar(void)
 
 3．CPU 1接收到CPU 0的“**使无效**”消息，将它(**该消息**)**排队**，并**立即响应该消息**。
 
-4．CPU 0接收到来自于CPU 1的响应消息，因此它放心的通过第4行的`smp_mb()`，从**存储缓冲区**移动“**a**”的值到**缓存行**。
+4．CPU 0接收到来自于CPU 1的**响应消息**，因此它放心的通过第4行的`smp_mb()`，从**存储缓冲区**移动“**a**”的值到**缓存行**。
 
-5．CPU 0执行b = 1。它已经拥有这个**缓存行**（也就是说，缓存行已经处于“modified”或者“exclusive”状态），因此它将“b”的新值**存储到缓存行**中。
+5．CPU 0执行b = 1。它已经拥有这个**缓存行**（也就是说，缓存行已经处于“modified”或者“exclusive”状态），因此它将“b”的新值**存储到缓存行！！！** 中。
 
-6．CPU 0**接收**到“**读**”消息，并且发送包含“b”的**新值**的缓存行到**CPU 1**，同时在自己的缓存中，标记缓存行为“**shared**”状态。
+6．CPU 0**接收**到“**读**”消息，并且发送包含“b”的**新值**的缓存行到**CPU 1**，同时**在自己的缓存**中，标记缓存行为“**shared！！！**”状态。
 
-7．CPU 1接收到包含“b”的缓存行并且将其**应用到本地缓存**。
+7．CPU 1接收到包含“b”的缓存行并且将其**应用到本地缓存**(并且会标记"shared"吧??)。
 
 8．CPU 1现在可以完成`while (b ==0) continue`，因为它发现“b”的值为1，接着处理下一条语句。
 
-9．CPU 1执行assert(a == 1)，并且，由于**旧的“a”值**还在CPU 1的**缓存**中，因此**陷入错误**。
+9．CPU 1执行assert(a == 1)，并且，由于**旧的“a”值**还在CPU 1的**缓存**中，因此**陷入错误**。(就是因为在排队, 还未真正处理, 所以导致内存乱序！！！)
 
 10．虽然陷入错误，**CPU 1**处理已经排队的“**使无效**”消息，并且（迟到）在**自己的缓存**中**刷新包含“a”值的缓存行**。
 
-## 四、内存屏障
+# 内存屏障
 
 既然硬件设计者通过**Write buffer**和**使无效队列**引入了额外的**内存乱序**问题，那么就应当为软件工程师提供某种方法来解决这个问题。即使相应的解决方法会折磨软件工程师。
 
