--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -165,7 +165,7 @@ void bar(void)
 
 3．CPU 1接收到CPU 0的“**使无效**”消息，将它(**该消息**)**排队**，并**立即响应该消息**。
 
-4．CPU 0接收到来自于CPU 1的**响应消息**，因此它放心的通过第4行的`smp_mb()`，从**存储缓冲区**移动“**a**”的值到**缓存行**。
+4．CPU 0接收到来自于CPU 1的**响应消息**，因此它放心的通过第4行的`smp_mb()`，从**存储缓冲区**移动“**a**”的值到**缓存行！！！**。
 
 5．CPU 0执行b = 1。它已经拥有这个**缓存行**（也就是说，缓存行已经处于“modified”或者“exclusive”状态），因此它将“b”的新值**存储到缓存行！！！** 中。
 
@@ -175,7 +175,7 @@ void bar(void)
 
 8．CPU 1现在可以完成`while (b ==0) continue`，因为它发现“b”的值为1，接着处理下一条语句。
 
-9．CPU 1执行assert(a == 1)，并且，由于**旧的“a”值**还在CPU 1的**缓存**中，因此**陷入错误**。(就是因为在排队, 还未真正处理, 所以导致内存乱序！！！)
+9．CPU 1执行assert(a == 1)，并且，由于**旧的“a”值**还在CPU 1的**缓存**中，因此**陷入错误**。(就是因为在排队, 还未从本地缓存行移除a, 尽管a已经在CPU 0设置为了1， 但是CPU 1还是从本地缓存能得到, 值是0， 所以导致内存乱序！！！)
 
 10．虽然陷入错误，**CPU 1**处理已经排队的“**使无效**”消息，并且（迟到）在**自己的缓存**中**刷新包含“a”值的缓存行**。
 
@@ -206,17 +206,17 @@ void bar(void)
 }
 ```
 
-内存屏障`smp_mb()`将导致CPU在**刷新后续的缓存行**（包含b的缓存行）**之前**，前面的**Write buffer被先刷新**。在**继续处理之前**，CPU可能采取的动作是：
+内存屏障`smp_mb()`将导致CPU在**刷新后续的缓存行！！！**（包含b的缓存行）**之前**，前面的**Write buffer！！！被先刷新**。在**继续处理之前**，CPU可能采取的动作是：
 
 1、简单的停顿下来，直到**存储缓冲区变成空**；
 
-2、也可能是使用**存储缓冲区**来**持有后续的存储操作**，直到**前面所有的存储缓冲区**已经被保存到**缓存行**中。
+2、也可能是使用**存储缓冲区**来**持有后续的存储操作**，直到**前面所有的存储缓冲区**已经被保存到**缓存行！！！** 中。
 
 理解其中第2点，能够帮助我们理解“内存屏障”这个单词的来历！！
 
-后一种情况下，操作序列可能如下所示：
+**后一种情况下！！！**，操作序列可能如下所示：
 
-1．CPU 0执行a= 1。缓存行**不在CPU0的缓存**中，因此**CPU 0**将“a”的**新值**放到**存储缓冲**中，并发送一个“**读使无效**”消息。
+1．CPU 0执行a= 1。缓存行**不在CPU0的缓存**中，因此**CPU 0**将“a”的**新值**放到**存储缓冲区**中，并发送一个“**读使无效**”消息。
 
 2．CPU 1 执行`while(b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
