--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
+++ b/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
@@ -115,7 +115,7 @@ MESI 存在“modified”，“exclusive”，“shared”和“invalid”四种
 
 MESI协议需要在CPU之间通信。如果CPU在**单一共享总线**上，只需要如下消息就足够了：
 
-- **读消息**：“读”消息包含**要读取的缓存行的物理地址**。
+- **读消息**：“读”消息包含**要读取的缓存行！！！的物理地址**。
 
 - **读响应消息**：“读响应”消息包含**较早前**的“**读**”消息的**数据**。这个“**读响应**”消息可能由**物理内存**或者**其他CPU**的缓存提供。例如，如果**一个缓存**处于“**modified**”状态，那么，**它的缓存**必须提供“**读响应**”消息。
 
