--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -94,7 +94,9 @@ void bar(void)
 }
 ```
 
-假设**CPU 0**执行`foo()`，**CPU1**执行`bar()`，再进一步假设**包含“a”的缓存**行仅仅位于**CPU1的缓存**中，**包含“b”的缓存行**被**CPU 0**所拥有。那么操作顺序可能如下：
+假设**CPU 0**执行`foo()`，**CPU1**执行`bar()`，再进一步假设**包含“a”的缓存**行仅仅位于**CPU1的缓存**中，**包含“b”的缓存行**被**CPU 0**所拥有。
+
+那么操作顺序可能如下：
 
 1．CPU 0 执行a = 1。缓存行**不在CPU0的缓存**中，因此**CPU0**将“a”的**新值**放到**Write buffer**，并发送一个“**读使无效**”消息。
 
@@ -216,11 +218,12 @@ void bar(void)
 
 理解其中第2点，能够帮助我们理解“内存屏障”这个单词的来历！！
 
-**后一种情况下！！！**，操作序列可能如下所示：
+**后一种情况下！！！**，操作序列可能如下所示, 假设**CPU 0**执行`foo()`，**CPU1**执行`bar()`，再进一步假设**包含“a”的缓存**行仅仅位于**CPU1的缓存**中，**包含“b”的缓存行**被**CPU 0**所拥有。
 
 1．CPU 0执行`a = 1`。缓存行**不在CPU0的缓存**中，因此**CPU 0**将“a”的**新值**放到**存储缓冲区**中，并发送一个“**读使无效**”消息。
 
-为什么是"读使无效"??
+- 读: 
+- 使无效: 
 
 2．CPU 1 执行`while(b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
