--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -52,15 +52,15 @@ assert(b == 2);
 
 3．因此，**CPU 0**发送一个“**读使无效！！！**（read-invalidate message）”消息，以**获得包含“a”的独享缓存行！！！**。
 
-4．**CPU 0**将“a”记录到**存储缓冲区(write buffer，不是缓存行)**。
+4．**CPU 0**将“a(值1)”记录到**存储缓冲区(write buffer，不是缓存行)**。
 
-5．**CPU 1**接收到“**读使无效**”消息，它通过**发送缓存行数据！！！**，并**从它的缓存行！！！** 中**移除数据！！！** 来**响应**这个消息。
+5．**CPU 1**接收到“**读使无效**”消息，它通过**发送a的缓存行数据！！！**，并**从它的缓存行！！！** 中**移除a数据！！！** 来**响应**这个消息。
 
 6．**CPU 0**开始执行**b = a + 1**。
 
-7．CPU 0从**CPU 1**接收到**缓存行**(存到缓存行)，它仍然拥有一个为“**0**”的“a”值。
+7．CPU 0从**CPU 1**接收到**缓存行**(也就是将来自CPU 1的数据存到缓存行)，它仍然拥有一个为“**0**”的“a”值。
 
-8．**CPU 0**从它的缓存中读取到“a”的值，发现**其值为0**。
+8．**CPU 0**从它的**缓存行**中读取到“a”的值，发现**其值为0**, 因为这时候的**存储缓冲区的值还没写到缓存行**。
 
 9．CPU 0将**存储队列**(write buffer)中的条目应用到**最近到达的缓存行**，设置**缓存行**中的“a”的值为**1**。
 
@@ -72,7 +72,7 @@ assert(b == 2);
 
 ![config](images/10.png)
 
-在调整后的架构中，**每个CPU在执行加载操作时，将考虑（或者嗅探）它的Writebuffer**。这样，在前面执行顺序的**第8步**，将在存储缓冲区中为“a”找到正确的值1 ，因此**最终的“b”值将是2**，这正是我们期望的。
+在调整后的架构中，**每个CPU在执行加载操作时，将考虑（或者嗅探）它的Writebuffer！！！**。这样，在前面执行顺序的**第8步**，将在**存储缓冲区**中为“a”找到**正确的值1** ，因此**最终的“b”值将是2**，这正是我们期望的。
 
 ## 违反全局内存序
 
@@ -222,8 +222,8 @@ void bar(void)
 
 1．CPU 0执行`a = 1`。缓存行**不在CPU0的缓存**中，因此**CPU 0**将“a”的**新值**放到**存储缓冲区**中，并发送一个“**读使无效**”消息。
 
-- 读: 
-- 使无效: 
+- 读: 见下面响应后动作
+- 使无效: 见下面响应后动作
 
 2．CPU 1 执行`while(b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
