--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
+++ b/Linux/Sync/RCU/深入理解RCU/1. 从硬件谈起之内存cache.md
@@ -125,7 +125,7 @@ MESI协议需要在CPU之间通信。如果CPU在**单一共享总线**上，只
 
 - **读使无效**：“读使无效”消息包含**缓存行要读取的物理地址**。同时**指示其他缓存移除数据**。因此，它同时包含一个“**读**”消息和一个“**使无效**”消息。“读使无效”消息同时需要“**读响应**”消息以及“**使无效应答**”消息**进行答应**。
 
-- **写回**：“写回”消息包含要回写到物理内存的地址和数据。(并且也许会“探测”其他CPU的缓存)。这个消息允许缓存在**必要时换出**处于“**modified**”状态的数据以腾出空间。
+- **写回**：“写回”消息包含要**回写到物理内存的地址和数据**。(并且也许会“探测”其他CPU的缓存)。这个消息允许缓存在**必要时换出**处于“**modified**”状态的数据以腾出空间。
 
 再次重申，所有这些消息均需要在CPU之间传播电信号，都面临霍金提出的那两个IT难题。
 
@@ -133,15 +133,15 @@ MESI协议需要在CPU之间通信。如果CPU在**单一共享总线**上，只
 
 ![config](images/7.png)
 
-- Transition (a)：缓存行被写回到物理内存，但是CPU仍然将它保留在缓存中，并在以后修改它。这个转换需要一个“写回”消息。
+- Transition (a)：**缓存行被写回到物理内存**，但是CPU仍然将它保留在缓存中，并在以后修改它。这个转换需要一个“**写回**”消息。
 
-- Transition (b)：CPU将数据写到缓存行，该缓存行目前处于排它访问。不需要发送或者接收任何消息。
+- Transition (b)：CPU将数据**写到缓存行**，该缓存行目前处于**排它访问**。不需要发送或者接收任何消息。
 
 - Transition (c)：CPU收到一个“读使无效”消息，相应的缓存行已经被修改。CPU必须使无效本地副本，然后响应“读响应”和 “使无效应答”消息，同时发送数据给请求的CPU，标示它的本地副本不再有效。
 
-- Transition (d)：CPU进行一个原子读—修改—写操作，相应的数据没有在它的缓存中。它发送一个“读使无效”消息，通过“读响应”消息接收数据。一旦它接收到一个完整的“使无效应答”响应集合，CPU就完成此转换。
+- Transition (d)：CPU进行一个`原子读—修改—写操作`，相应的**数据没有在它的缓存**中。它发送一个“**读使无效**”消息，通过“读响应”消息接收数据。一旦它接收到一个完整的“使无效应答”响应集合，CPU就完成此转换。
 
-- Transition (e)：CPU进行一个原子读—修改—写操作，相应的数据在缓存中是只读的。它必须发送一个“使无效”消息，并等待“使无效应答”响应集合以完成此转换。
+- Transition (e)：CPU进行一个`原子读—修改—写操作`，相应的数据在**缓存中是只读**的。它必须发送一个“**使无效**”消息，并等待“使无效应答”响应集合以完成此转换。
 
 - Transition (f)：其他某些CPU读取缓存行，其数据由本CPU提供，本CPU包含一个只读副本。数据只读的原因，可能是由于数据已经回写到内存中。这个转换开始于接收到一个“读”消息，最终本CPU响应了一个“读响应” 消息。
 
