--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -56,6 +56,9 @@ assert(b == 2);
 
 5．**CPU 1**接收到“**读使无效**”消息，它通过**发送a的缓存行数据！！！**，并**从它的缓存行！！！** 中**移除a数据！！！** 来**响应**这个消息。
 
+- 读: 
+- 使无效:
+
 6．**CPU 0**开始执行**b = a + 1**。
 
 7．CPU 0从**CPU 1**接收到**缓存行**(也就是将来自CPU 1的数据存到缓存行)，它仍然拥有一个为“**0**”的“a”值。
