--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -1,12 +1,14 @@
 # 内存Cache的不足
 
-上一篇文章我们谈到了内存Cache，并且描述了典型的Cache一致性协议MESI。**Cache**的**根本目的**，是解决**内存与CPU速度**多达两个数量级的**性能差异**。一个包含Cache的计算机系统，其结构可以简单的表示为下图：
+上一篇文章我们谈到了内存Cache，并且描述了典型的Cache一致性协议MESI。**Cache**的**根本目的**，是解决**内存与CPU速度**多达两个数量级的**性能差异**。
+
+一个包含Cache的计算机系统，其结构可以简单的表示为下图：
 
 ![config](images/8.png)
 
 仅仅只有Cache的计算机系统，它还存在如下问题：
 
-1、Cache的速度，虽然比内存有了极大的提升，但是仍然比CPU慢几倍。
+1、**Cache的速度**，虽然比内存有了极大的提升，但是仍然**比CPU慢几倍**。
 
 2、在发生“`warmup cache miss`”、“`capacity miss`”、“`associativity miss`”时，**CPU**必须等待**从内存中读取数据**，此时CPU会处于一种**Stall的状态**。其等待时间可能达到几百个CPU指令周期。
 
@@ -14,7 +16,7 @@
 
 # Write buffer的存在
 
-如果CPU仅仅是执行foo = 1这样的语句，它其实**无须从内存或者缓存中读取foo现在的值**。因为无论foo当前的值是什么，它**都会被覆盖**。在仅仅只有Cache的系统中，foo = 1 这样的操作也会形成**写停顿**。
+如果CPU仅仅是执行foo = 1这样的语句，它其实**无须！！！从内存或者缓存中读取foo现在的值**。因为无论foo当前的值是什么，它**都会被覆盖！！！**。在仅仅**只有Cache**的系统中，foo = 1 这样的操作也会形成**写停顿**。
 
 自然而然的，CPU设计者应当会想到在**Cache 和CPU之间**再**添加一级缓存**。由于这样的缓存主要是应对**写操作引起！！！** 的**Cache Miss！！！**，并且缓存的数据与写操作相关，因此CPU设计者将它命名为“Write buffer”。调整后的结构示意图如下(图中的store buffer即为write buffer)：
 
@@ -52,6 +54,8 @@ assert(b == 2);
 
 3．因此，**CPU 0**发送一个“**读使无效！！！**（read-invalidate message）”消息，以**获得包含“a”的独享缓存行！！！**。
 
+为何是"读使无效", 见第一篇中`MESI状态转换`
+
 4．**CPU 0**将“a(值1)”记录到**存储缓冲区(write buffer，不是缓存行)**。
 
 5．**CPU 1**接收到“**读使无效**”消息，它通过**发送a的缓存行数据！！！**，并**从它的缓存行！！！** 中**移除a数据！！！** 来**响应**这个消息。
@@ -67,7 +71,7 @@ assert(b == 2);
 
 9．CPU 0将**存储队列**(write buffer)中的条目应用到**最近到达的缓存行**，设置**缓存行**中的“a”的值为**1**。
 
-10．CPU 0将前面加载的“a”值0(因为所有使用的**数据都是读取的**，也就是说从**缓存行**来，而**不是存储队列**)加1，并存储该值到包含“b”的**缓存行**中（假设已经被CPU 0所拥有）。
+10．CPU 0将前面加载的“a”值0(因为所有使用的**数据都是读取的**，也就是说从**缓存行**来，而**不是存储队列**)加1，并存储该值到包含“b”的**缓存行！！！**中（假设已经被CPU 0所拥有）。
 
 11．CPU 0 执行assert(b == 2)，并**引起错误**。
 
@@ -105,7 +109,9 @@ void bar(void)
 
 2．CPU 1 执行`while (b == 0) continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
-3．CPU 0 执行 **b = 1**，它已经**拥有了该缓存行**（换句话说，缓存行要么已经处于“modified”，要么处于“exclusive”状态），因此它存储**新**的“**b**”值到它的**缓存行**中。(为啥不发送"读使无效"??)
+3．CPU 0 执行 **b = 1**，它已经**拥有了该缓存行**（换句话说，缓存行要么已经处于“modified”，要么处于“exclusive”状态），因此它存储**新**的“**b**”值到它的**缓存行**中。
+
+**为何不是写入Write buffer??**
 
 4．CPU 0 接收到“**读**”消息，并且发送缓存行中的最近更新的“b”的值到**CPU1**，同时将缓存行设置为“shared”状态。
 
