--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -16,9 +16,11 @@
 
 # Write buffer的存在
 
-如果CPU仅仅是执行foo = 1这样的语句，它其实**无须！！！从内存或者缓存中读取foo现在的值**。因为无论foo当前的值是什么，它**都会被覆盖！！！**。在仅仅**只有Cache**的系统中，foo = 1 这样的操作也会形成**写停顿**。
+如果CPU**仅仅**是执行`foo = 1`这样的语句，它其实**无须！！！从内存或者缓存中读取！！！foo现在的值**。因为无论foo当前的值是什么，它**都会被覆盖！！！**。在仅仅**只有Cache**的系统中，`foo = 1` 这样的操作也会形成**写停顿**。
 
-自然而然的，CPU设计者应当会想到在**Cache 和CPU之间**再**添加一级缓存**。由于这样的缓存主要是应对**写操作引起！！！** 的**Cache Miss！！！**，并且缓存的数据与写操作相关，因此CPU设计者将它命名为“Write buffer”。调整后的结构示意图如下(图中的store buffer即为write buffer)：
+**那为何写数据需要发送"读使无效", 而不是只发送"使无效"???**
+
+自然而然的，CPU设计者应当会想到在**Cache 和CPU之间**再**添加一级缓存**。由于这样的缓存主要是应对**写操作引起！！！** 的**Cache Miss！！！**，并且缓存的数据与写操作相关，因此CPU设计者将它命名为“`Write buffer`”。调整后的结构示意图如下(图中的store buffer即为write buffer)：
 
 ![config](images/9.png)
 
@@ -54,7 +56,7 @@ assert(b == 2);
 
 3．因此，**CPU 0**发送一个“**读使无效！！！**（read-invalidate message）”消息，以**获得包含“a”的独享缓存行！！！**。
 
-为何是"读使无效", 见第一篇中`MESI状态转换`
+**为何要“读”呢？？？**
 
 4．**CPU 0**将“a(值1)”记录到**存储缓冲区(write buffer，不是缓存行)**。
 
