--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -62,18 +62,20 @@ assert(b == 2);
 
 5．**CPU 1**接收到“**读使无效**”消息，它通过**发送a的缓存行数据！！！**，并**从它的缓存行！！！** 中**移除a数据！！！** 来**响应**这个消息。
 
-- 读: 
+- 读: 是为了到缓存行？？？
 - 使无效: 
 
 6．**CPU 0**开始执行**b = a + 1**。
 
-7．CPU 0从**CPU 1**接收到**缓存行**(也就是将来自CPU 1的数据存到缓存行)，它仍然拥有一个为“**0**”的“a”值。
+7．CPU 0从**CPU 1**接收到**缓存行**(也就是将来自**CPU 1的数据存到缓存行**)，它仍然拥有一个为“**0**”的“a”值。
+
+所以接收到以后, 就会放入**缓存行？？？**
 
 8．**CPU 0**从它的**缓存行**中读取到“a”的值，发现**其值为0**, 因为这时候的**存储缓冲区的值还没写到缓存行**。
 
 9．CPU 0将**存储队列**(write buffer)中的条目应用到**最近到达的缓存行**，设置**缓存行**中的“a”的值为**1**。
 
-10．CPU 0将前面加载的“a”值0(因为所有使用的**数据都是读取的**，也就是说从**缓存行**来，而**不是存储队列**)加1，并存储该值到包含“b”的**缓存行！！！**中（假设已经被CPU 0所拥有）。
+10．CPU 0将前面加载的“a”值0(因为所有使用的**数据都是读取的**，也就是说从**缓存行**来，而**不是存储队列**)加1，并存储该值到包含“b”的**缓存行！！！**中（假设**已经被CPU 0所拥有**, 所以一旦拥有则直接写到缓存行, 而不是write buffer？？？）。
 
 11．CPU 0 执行assert(b == 2)，并**引起错误**。
 
