--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -69,7 +69,7 @@ assert(b == 2);
 
 7．CPU 0从**CPU 1**接收到**缓存行**(也就是将来自**CPU 1的数据存到缓存行**)，它仍然拥有一个为“**0**”的“a”值。
 
-所以接收到以后, 就会放入**缓存行？？？**
+write buffer是为了写操作用, 所以接收到以后, 就会放入**缓存行**
 
 8．**CPU 0**从它的**缓存行**中读取到“a”的值，发现**其值为0**, 因为这时候的**存储缓冲区的值还没写到缓存行**。
 
@@ -153,10 +153,6 @@ void bar(void)
 
 这个事实带来了额外的**内存乱序**的机会，看看如下示例：
 
-假设“a”和“b”被初始化为**0**，“a”是只读的（MESI“**shared**”状态, CPU 0和CPU 1都有其缓存），“b”被**CPU 0**拥有（MESI“**exclusive**”或者“**modified**”状态, 因为这两个状态就表明CPU 1不具有）。
-
-然后假设CPU 0执行foo()而CPU1执行bar()，代码片段如下：
-
 ```cpp
 // CPU 0
 void foo(void)
@@ -174,13 +170,17 @@ void bar(void)
 }
 ```
 
+假设“a”和“b”被初始化为**0**，“a”是只读的（MESI“**shared**”状态, CPU 0和CPU 1都有其缓存），“b”被**CPU 0**拥有（MESI“**exclusive**”或者“**modified**”状态, 因为这两个状态就表明CPU 1不具有）。然后假设CPU 0执行foo()而CPU1执行bar()，
+
 操作顺序可能如下：
 
 1．CPU 0执行**a = 1**。在CPU0中，相应的缓存行是**只读**的，因此CPU 0将“a”的新值放入**存储缓冲区**，并发送一个“**使无效**”消息，这是为了使**CPU1**的缓存中相应的**缓存行失效**。
 
+**因为有了缓存行, 所以不发读了？？？**
+
 2．CPU 1执行`while (b == 0)continue`，但是包含“b”的缓存行**不在它的缓存**中，因此它发送一个“**读**”消息。
 
-3．CPU 1接收到CPU 0的“**使无效**”消息，将它(**该消息**)**排队**，并**立即响应该消息**。
+3．CPU 1接收到CPU 0的“**使无效**”消息，将**该消息排队**，并**立即响应该消息**。
 
 4．CPU 0接收到来自于CPU 1的**响应消息**，因此它放心的通过第4行的`smp_mb()`，从**存储缓冲区**移动“**a**”的值到**缓存行！！！**。
 
