--- Auto-Git Commit ---

--- a/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
+++ b/Linux/Sync/RCU/深入理解RCU/2. 从硬件说起之内存屏障.md
@@ -186,13 +186,15 @@ void bar(void)
 
 5．CPU 0执行b = 1。它已经拥有这个**缓存行**（也就是说，缓存行已经处于“modified”或者“exclusive”状态），因此它将“b”的新值**存储到缓存行！！！** 中。
 
+独占
+
 6．CPU 0**接收**到“**读**”消息，并且发送包含“b”的**新值**的缓存行到**CPU 1**，同时**在自己的缓存**中，标记缓存行为“**shared！！！**”状态。
 
 7．CPU 1接收到包含“b”的缓存行并且将其**应用到本地缓存**(并且会标记"shared"吧??)。
 
 8．CPU 1现在可以完成`while (b ==0) continue`，因为它发现“b”的值为1，接着处理下一条语句。
 
-9．CPU 1执行assert(a == 1)，并且，由于**旧的“a”值**还在CPU 1的**缓存**中，因此**陷入错误**。(就是因为在排队, 还未从本地缓存行移除a, 尽管a已经在CPU 0设置为了1， 但是CPU 1还是从本地缓存能得到, 值是0， 所以导致内存乱序！！！)
+9．CPU 1执行·，并且，由于**旧的“a”值**还在CPU 1的**缓存**中，因此**陷入错误**。(就是因为在排队, 还未从本地缓存行移除a, 尽管**a已经在CPU 0设置为了1**， 但是CPU 1还是从本地缓存能得到, 值是0， 所以导致内存乱序！！！)
 
 10．虽然陷入错误，**CPU 1**处理已经排队的“**使无效**”消息，并且（迟到）在**自己的缓存**中**刷新包含“a”值的缓存行**。
 
@@ -223,11 +225,11 @@ void bar(void)
 }
 ```
 
-内存屏障`smp_mb()`将导致CPU在**刷新后续的缓存行！！！**（包含b的缓存行）**之前**，前面的**Write buffer！！！被先刷新**。在**继续处理之前**，CPU可能采取的动作是：
+内存屏障`smp_mb()`将导致CPU在**刷新后续的缓存行！！！**（包含b的缓存行）**之前**，前面的**Write buffer！！！被先刷新**到缓存行。在**继续处理之前**，CPU可能采取的动作是：
 
 1、简单的停顿下来，直到**存储缓冲区变成空**；
 
-2、也可能是使用**存储缓冲区**来**持有后续的存储操作**，直到**前面所有的存储缓冲区**已经被保存到**缓存行！！！** 中。
+2、也可能是使用**存储缓冲区(不是直接的缓存行)** 来 **持有后续的存储操作！！！**，直到**前面所有！！！的存储缓冲区**已经被保存到**缓存行！！！** 中。
 
 理解其中第2点，能够帮助我们理解“内存屏障”这个单词的来历！！
 
